# data-migration-validation

./: .env.example  .gitignore  ALL_FEATURES_AVAILABLE.md  ALL_PHASES_COMPLETION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  AZURE_SQL_SAMPLE_DATA_FIX.md  BATCH_OPERATIONS_COMPLETE_GUIDE.md  BATCH_OPERATIONS_DELIVERY_SUMMARY.md  BATCH_OPERATIONS_ENHANCEMENTS_SUMMARY.md  BATCH_OPERATIONS_TEST_REPORT.md  BATCH_REPORT_FIXES_COMPLETE.md  BATCH_REPORT_FIX_NEEDED.md  BATCH_STATUS_FIX.md  CLEANUP_SUMMARY.md  CODE_FIXES_APPLIED.md  CODE_REVIEW_ACTION_ITEMS.md  COMPARISON_REPORT_ENHANCEMENT_PROGRESS.md  COMPARISON_TABLE_FIX.md  COMPARISON_VIEWER_GUIDE.md  COMPLETE_SYSTEM_GUIDE.md  DIM_DATE_CORRUPTION_FIX.md  DOCKER_UNIFIED_GUIDE.md  FEATURE_MAPPING.md  FRONTEND_AUTOMATION_COMPLETE.md  INTELLIGENT_SUGGESTIONS_SUMMARY.md  KNOWN_ISSUES.md  Makefile  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  PIPELINE_BUILDER_COMPLETE.md  PROGRESS_TRACKER.md  PROJECT_AUTOMATION_BACKEND_COMPLETE.md  PROJECT_PLAN.md  QUICK_START_INTELLIGENT_QUERIES.md  README.md  SCHEMA_SUBSTITUTION_IMPLEMENTATION.md  SIMPLE_USAGE_GUIDE.md  (+11 more)
ombudsman_core/: .env  Dockerfile  Makefile  bootstrap.sh  build_part1.sh  build_part2.sh  build_part3.sh  build_part4.sh  build_part5.sh  build_part6.sh  builder.ps1  docker-compose.yml  pyproject.toml
ombudsman_core/src/ombudsman/: bootstrap.py  change_password.py  pyproject.toml 
ombudsman_core/src/utils/: snowflake_conn.py  sqlserver_conn.py
ombudsman_core/src/web/: app.py
(+987 files in other folders)
